--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
   ],
   "dependencies": {
     "angular": "~1.4.0",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "font-awesome": "~4.3.0",
+    "slimScroll": "~1.3.6",
+    "fastclick": "~1.0.6",
+    "admin-lte": "~2.1.2"
   }
 }
