--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "font-awesome": "~4.3.0",
     "slimScroll": "~1.3.6",
     "fastclick": "~1.0.6",
-    "admin-lte": "~2.1.2"
+    "admin-lte": "~2.1.2",
+    "angular-ui-router": "~0.2.15",
+    "angular-resource": "~1.4.0"
   }
 }
