Tipo de Produto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/livraria
+#spring.data.mongodb.uri=mongodb://localhost:27017/livraria
 logging.level.org.springframework=INFO
 logging.level.br.org.itai=DEBUG
