--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "fastclick": "~1.0.6",
     "admin-lte": "~2.1.2",
     "angular-ui-router": "~0.2.15",
-    "angular-resource": "~1.4.0"
+    "angular-resource": "~1.4.0",
+    "angular-dialog-service": "~5.2.8"
   }
 }
