--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,2 +1,5 @@
-spring.data.mongodb.uri=mongodb://jeans-dev:*ticarica1@ds061158.mongolab.com:61158/livraria
+spring.data.mongodb.uri=mongodb://$OPENSHIFT_MONGODB_DB_HOST:$OPENSHIFT_MONGODB_DB_PORT/
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=IWkuJ5FECrcg
+spring.data.mongodb.database=leolivraria
 java.runtime.version=1.8
